--- a/quiz_app.html
+++ b/quiz_app.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" type="text/css" href="css/app.css">
     <title>Question Time</title>
     <script type="text/javascript" src="json/questions.json"></script>
+</head>
+
+
 
 <body>
     <div id="header">
@@ -58,6 +61,7 @@
     </div>
 
     <script src="js/app.js"></script>
+    <script src="js/countdown.js"></script>
 </body>
 
 </html>
