Naa nay countdown timer

--- a/quiz_app.html
+++ b/quiz_app.html
@@ -14,7 +14,7 @@
 
 <body>
     <div id="header">
-        <h1>Question Time<br>The Quiz App</h1>
+        <h1><span id="quizLength"></span> Questions<br>The Quiz App</h1>
     </div>
 
     <!--Display quiz here-->
@@ -36,6 +36,10 @@
     <!--display results-->
     <div id="results"></div>
 
+    <button id="tryAgain">
+        <p>Try Again</p>
+    </button>
+
     <!--countdown timer-->
 
     <h2>Countdown Timer</h2>
@@ -54,6 +58,7 @@
             <!-- //This is where the number of seconds for our countdown will reside -->
         </div>
     </div>
+
 
 
     <div id="footer">
