--- a/quiz_app.html
+++ b/quiz_app.html
@@ -24,21 +24,24 @@
     </div>
 
     <!--performs user interaction requirements for quiz app-->
-    <button id="previous">
-        <p>Previous Question</p>
-    </button>
-    <button id="next">
-        <p>Next Question</p>
-    </button>
-    <button id="submit">
-        <p>Submit Quiz</p>
-    </button>
+    <div class="requirementsButton">
+        <button id="previous">
+            <p>Previous Question</p>
+        </button>
+        <button id="next">
+            <p>Next Question</p>
+        </button>
+        <button id="submit">
+            <p>Submit Quiz</p>
+        </button>
+    </div>
+   
 
     <!--display results-->
     <div id="results"></div>
 
     <button id="tryAgain">
-        <p>Try Again</p>
+        <p style="color: red;">Try Again</p>
     </button>
 
     <!--countdown timer-->
